--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea/dbnavigator.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
